make changes to the checkout page for responsiveness

--- a/checkout.html
+++ b/checkout.html
@@ -195,7 +195,7 @@
                         <div id="title"><h1>audiophile</h1></div>
         
                     <div id="footNav">
-                        <div><a href="#">HOME</a></div>
+                        <div><a href="index.html">HOME</a></div>
                         <div><a href="headphone.html">HEADPHONES</a></div>
                         <div><a href="#">SPEAKERS</a></div>
                         <div><a href="#">EARPHONES</a></div>
